<resources>
    <string name="app_name">ContractorCalculator</string>
    <string name="calculate">Calculate</string>
    <string name="amount">Amount</string>
    <string name="labor">Labor:</string>
    <string name="material">Material:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax_5">Tax (5%):</string>
    <string name="_0_00">$0.00</string>
    <string name="total">Total:</string>
</resources>