<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="95dp"
        android:backgroundTint="#BCB7B7"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/laborAmount"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="95dp"
        android:ems="10"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/materialAmount"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laborAmount"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/laborLabel"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="145dp"
        android:text="@string/labor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/materialLabel"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="55dp"
        android:text="@string/material"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laborLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/subtotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/taxLabel"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/tax_5"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxLabel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/subtotalAmount"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="53dp"
        android:text="@string/_0_00"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/subtotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/materialAmount" />

    <TextView
        android:id="@+id/taxAmount"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="53dp"
        android:text="@string/_0_00"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/taxLabel"
        app:layout_constraintTop_toBottomOf="@+id/subtotalAmount" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/_0_00"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toBottomOf="@+id/taxAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>